styles.css
.fieldrec-view {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

/* TODO: accent or yellow while monitoring, red with time while recording. */
.status-bar-item.plugin-field-recorder {
	background: var(--color-accent);
	justify-content: center;
	padding-left: 1em;
	padding-right: 1em;
}

.fieldrec-status-bar-icon {
	color: var(--text-on-accent);
}

.fieldrec-section {
	padding: var(--size-4-4);
}

.fieldrec-section-record {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	width: 100%;
	min-height: 400px;
}

.fieldrec-section-settings {
	overflow: auto;
}

.fieldrec-section-record > :not(:first-child) {
	margin: var(--size-4-2) 0;
}

.fieldrec-section .setting-item.is-disabled {
	opacity: 0.5;
}

.fieldrec-section + .fieldrec-section {
	border-top: 1px solid var(--background-modifier-border);
}

.fieldrec-btn-icon:disabled {
	color: var(--text-faint);
}

.fieldrec-btn-icon + .fieldrec-btn-icon {
	margin-left: var(--size-4-2);
}

.fieldrec-btn-icon.-record:not(:disabled) {
	background: var(--interactive-accent);
}

.fieldrec-btn-icon:not(:disabled) > svg {
	stroke: #ffffff;
}

.fieldrec-btn-icon.-record:not(:disabled):hover {
	background: var(--interactive-accent-hover);
}

.fieldrec-btn-icon.-pause:not(:disabled) {
	background: var(--color-yellow);
}

.fieldrec-btn-icon.-pause:not(:disabled):hover {
	background: rgba(var(--color-yellow-rgb), 0.8);
}

.fieldrec-btn-icon.-stop:not(:disabled) {
	background: var(--color-red);
}

.fieldrec-btn-icon.-stop:not(:disabled):hover {
	background: rgba(var(--color-red-rgb), 0.8);
}

.fieldrec-btn-row {
	width: 100%;
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.fieldrec-section-record canvas {
	width: 100%;
	height: 150px;
	image-rendering: pixelated;
	border: var(--input-border-width) solid var(--background-modifier-border);
	border-radius: calc(min(var(--input-radius), var(--input-height) / 2));
}

